--- a/Tareas_Vue/index.html
+++ b/Tareas_Vue/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tareas Vue</title>
+    <title>Tareas Vue editando para GitHub</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 <style>
   .tareaRealizada {
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       <div id="taskApp"class="col-sm8 col-sm-offset-2">
+        <h2>Jacrek SvoTmi</h2>
         <h1>{{nameApp}}</h1>
         <form v-on:submit="agregarTarea">
         <!--<form v-on:submit="agregarTarea(tareas)">-->
